--- a/shAkalam/sUtram/AshvalAyanaH/shrautam/sarva-prastutiH/07.md
+++ b/shAkalam/sUtram/AshvalAyanaH/shrautam/sarva-prastutiH/07.md
@@ -2432,7 +2432,18 @@ title = "०७"
 
 <details><summary>टीका</summary>
 
-इदानीं न्यूङ्खलक्षणमुच्यते। तयोरर्धर्चयोर्यो द्वितीयः स्वरः संहितावस्थायां तमोकारं त्रिमात्रं कृत्वा त्रिर्ब्रूयात्पच्छोऽर्धश ऋक्श इति सर्वत्र शंसनविधानात्[^1279]। संहितावस्थनामेव[^1280] मन्त्राणां शंसनमुक्तं भवति। अतः संहितावस्थायामित्युक्तम्। पूर्वसूत्रेऽर्धर्चाद्योरित्याद्ययोरक्षरयोर्न्यूङ्खो विहितः, इह तु द्वितीययोर्विधीयते कथमनयोः संवन्ध इति। पूर्वसूत्रस्यायमभिप्रायः ब्राह्मणोक्तो यो न्यूह्णविधिरेकाक्षरद्व्यक्षरत्र्यक्षर चतुरक्षरैरिति सोऽयमधर्चाद्योरित्यनेन सूचितो भवति। यस्तु खलु पक्षस्तत्रैव सिद्धान्तितः ‘तस्माद्द्व्यक्षरेणैव न्यूङ्खयेत्’इति तमेव पक्षमङ्गीकृत्येदानीं न्यू विधीयते द्वितीयं स्वरमित्यादिना।
+इदानीं न्यूङ्ख-लक्षणम् उच्यते।  
+तयोर् अर्धर्चयोर् यो द्वितीयः स्वरः  
+संहितावस्थायां तम् ओकारं त्रिमात्रं कृत्वा  
+त्रिर् ब्रूयात् पच्छोऽर्धश ऋक्श  
+इति सर्वत्र शंसन-विधानात्[^1279]।  
+संहितावस्थनामेव[^1280] मन्त्राणां शंसनम् उक्तं भवति।  
+अतः संहितावस्थायाम् इत्युक्तम्।  
+पूर्वसूत्रेऽर्धर्चाद्योरित्याद्ययोरक्षरयोर्न्यूङ्खो विहितः, इह तु द्वितीययोर्विधीयते कथमनयोः संवन्ध इति। पूर्वसूत्रस्यायमभिप्रायः ब्राह्मणोक्तो यो न्यूह्णविधिरेकाक्षरद्व्यक्षरत्र्यक्षर चतुरक्षरैरिति सोऽयमधर्चाद्योरित्यनेन सूचितो भवति। 
+
+यस्तु खलु पक्षस्तत्रैव सिद्धान्तितः  
+‘तस्माद् द्व्यक्षरेणैव न्यूङ्खयेत्’ इति  
+तमेव पक्षमङ्गीकृत्येदानीं न्यू विधीयते द्वितीयं स्वरमित्यादिना।
 
 [^1279]: "ङ. झ. ॰सने वि॰।"
 
@@ -2500,7 +2511,8 @@ title = "०७"
 
 <details><summary>टीका</summary>
 
-उक्तलक्षणस्यापि न्यूङ्खस्यार्घौकारस्वरूपस्यालौकिकत्वादन्यदप्येवजातयिकं संदेहं व्यावर्तयितुं निदर्शनं क्रियते।
+उक्तलक्षणस्यापि न्यूङ्खस्यार्घौकारस्वरूपस्यालौकिकत्वाद्  
+अन्यद् अप्य् एव जातयिकं?? संदेहं व्यावर्तयितुं निदर्शनं क्रियते।
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -2515,7 +2527,12 @@ title = "०७"
 
 <details><summary>टीका</summary>
 
-आपो प्लुतः ३, ॐ ॐ ॐ ॐ ॐ[^1283]रेव • रायो प्लुतः ३, ॐॐॐ ॐ ॐ[^1284]श्चस्थः० यो धो ३ मापो प्लुतइत्येवं न्यूङ्खपुनरावृत्तिप्रदर्शनं प्रत्यावृत्तिन्यूङ्खप्रापणार्थम्। अयमेव पाठोऽबिच्छिन्नसंप्रदायादागतःत्वात्त्यक्तव्यः। यस्तु पुनः संहितानुरूपेण पाठः स प्रमादकृतत्वात्त्यक्तव्यः।
+आपो प्लुतः ३, ॐ ॐ ॐ ॐ ॐ[^1283]रेव • रायो प्लुतः ३, ॐॐॐ ॐ ॐ[^1284]श्चस्थः० यो धो ३ मापो प्लुत  
+इत्येवं न्यूङ्ख-पुनर्-आवृत्ति-प्रदर्शनं  
+प्रत्यावृत्ति-न्यूङ्ख-प्रापणार्थम्।  
+अयम् एव पाठो ऽविच्छिन्न-संप्रदायाद् आगतत्वात् त्यक्तव्यः??।  
+यस्तु पुनः संहितानुरूपेण पाठः  
+स प्रमादकृतत्वात् त्यक्तव्यः।
 
 [^1283]: "ग. ॐ ओ ३ ५ ओ ३ ३,रे।"
 
@@ -2539,7 +2556,7 @@ title = "०७"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्योत्तमावर्जंतृतीयेषु पादेषु न्यूड्खो निनर्दश्च।
+तस्योत्तमावर्जं तृतीयेषु पादेषु न्यूड्खो निनर्दश्च।
 </details>
 
 <details><summary>मूलम्</summary>
@@ -2569,7 +2586,7 @@ title = "०७"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स्वरादिरन्त ओकारश्चतुर्निनर्दः।
+स्वरादिरन्त ओकारश् चतुर्-निनर्दः।
 </details>
 
 <details><summary>मूलम्</summary>
