--- a/shAkalam/sUtram/AshvalAyanaH/shrautam/sarva-prastutiH/07.md
+++ b/shAkalam/sUtram/AshvalAyanaH/shrautam/sarva-prastutiH/07.md
@@ -2422,7 +2422,7 @@ title = "०७"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-द्वितीयं स्वरमोकारं त्रिमात्रमुदात्तं त्रिः।
+द्वितीयं स्वरम् ओकारं त्रिमात्रम् उदात्तं त्रिः।
 </details>
 
 <details><summary>मूलम्</summary>
