--- a/shAkalam/saMhitA/sarva-prastutiH/08/089.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/089.md
@@ -1620,6 +1620,12 @@ júṣṭam ← júṣṭa- (nominal stem)
 आ॒मासु॑ । प॒क्वम् । ऐर॑यः । आ । सूर्य॑म् । रो॒ह॒यः॒ । दि॒वि ।  
 घ॒र्मम् । न । साम॑न् । त॒प॒त॒ । सु॒वृ॒क्तिऽभिः॑ । जुष्ट॑म् । गिर्व॑णसे । बृ॒हत् ॥
 </details>
+
+<details><summary>पद-पाठः-तैत्तिरीयः</summary>
+
+आ॒मासु॑ । प॒क्वम् । ऐर॑यः । एति॑ । सूर्य᳚म् । रो॒ह॒यः॒ । दि॒वि ॥ घ॒र्मम् । न । सामन्न्॑ । त॒प॒त॒ । सु॒वृ॒क्तिभि॒रिति॑ सुवृ॒क्ति-भिः॒ । जुष्ट᳚म् । गिर्व॑णसे । गिरः॑ ॥ 
+</details>
+
 <details><summary>Hellwig Grammar</summary>
 
 -   *āmāsu* ← *āma*
