--- a/shAkalam/saMhitA/sarva-prastutiH/05/002.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/05/002.md
@@ -2738,6 +2738,12 @@ viníkṣe ← √nikṣ- (root)
 वि । ज्योति॑षा । बृ॒ह॒ता । भा॒ति॒ । अ॒ग्निः । आ॒विः । विश्वा॑नि । कृ॒णु॒ते॒ । म॒हि॒ऽत्वा ।  
 प्र । अदे॑वीः । मा॒याः । स॒ह॒ते॒ । दुः॒ऽएवाः॑ । शिशी॑ते । शृङ्गे॒ इति॑ । रक्ष॑से । वि॒ऽनिक्षे॑ ॥
 </details>
+
+<details><summary>पद-पाठः-तैत्तिरीयः</summary>
+
+वीति॑ । ज्योति॑षा । बृ॒ह॒ता । भा॒ति॒ । अ॒ग्निः । आ॒विः । विश्वा॑नि । कृ॒णु॒ते॒ । म॒हि॒त्वेति॑ महि-त्वा ॥ प्रेति॑ । अदे॑वीः । मा॒याः । स॒ह॒ते॒ । दु॒रेवा॒ इति॑ दुः-एवाः᳚ । शिशी॑ते । शृङ्गे॒ इति॑ । रख्ष॑से । वि॒निख्ष॒ इति॑ वि-निख्षे᳚ ॥ 
+</details>
+
 <details><summary>Hellwig Grammar</summary>
 
 -   *vi*
@@ -3071,6 +3077,13 @@ varante ← √vr̥- (root)
 उ॒त । स्वा॒नासः॑ । दि॒वि । स॒न्तु॒ । अ॒ग्नेः । ति॒ग्मऽआ॑युधाः । रक्ष॑से । हन्त॒वै । ऊं॒ इति॑ ।  
 मदे॑ । चि॒त् । अ॒स्य॒ । प्र । रु॒ज॒न्ति॒ । भामाः॑ । न । व॒र॒न्ते॒ । प॒रि॒ऽबाधः॑ । अदे॑वीः ॥
 </details>
+
+<details><summary>पद-पाठः</summary>
+
+उ॒त । स्वा॒नासः॑ । दि॒वि । स॒न्तु॒ । अ॒ग्नेः । ति॒ग्मायु॑धा॒ इति॑ ति॒ग्म-आ॒यु॒धाः॒ । रख्ष॑से । हन्त॒वै । उ॒ ॥   
+मदे᳚ । चि॒त्॒ । अ॒स्य॒ । प्रेति॑ । रु॒ज॒न्ति॒ । भामाः᳚ । न । व॒र॒न्ते॒ । प॒रि॒बाध॒ इति॑ परि-बाधः॑ । अदे॑वीः ॥ [34]  
+</details>
+
 <details><summary>Hellwig Grammar</summary>
 
 -   *uta*
