--- a/shAkalam/saMhitA/sarva-prastutiH/07/099.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/07/099.md
@@ -703,6 +703,7 @@ Nicht ist, Gott Vischnu, einer je, noch wird sein, der deiner Grösse andres End
 वि꣡ अस्तभ्ना रो꣡दसी विष्णव् एते꣡  
 दाध꣡र्थ पृथिवी꣡म् अभि꣡तो मयू꣡खैः
 </details>
+
 <details><summary>Vedaweb annotation</summary>
 
 _________
@@ -771,6 +772,12 @@ pr̥thivī́m ← pr̥thivī́- (nominal stem)
 इरा॑वती॒ इतीरा॑ऽवती । धे॒नु॒मती॒ इति॑ धे॒नु॒ऽमती॑ । हि । भू॒तम् । सु॒य॒व॒सिनी॒ इति॑ सु॒ऽय॒व॒सिनी॑ । मनु॑षे । द॒श॒स्या ।  
 वि । अ॒स्त॒भ्नाः॒ । रोद॑सी॒ इति॑ । वि॒ष्णो॒ इति॑ । ए॒ते इति॑ । दा॒धर्थ॑ । पृ॒थि॒वीम् । अ॒भितः॑ । म॒यूखैः॑ ॥
 </details>
+
+<details><summary>पद-पाठः-तैत्तिरीयः</summary>
+
+इरा॑वती॒ इतीरा᳚-व॒ती॒ । धे॒नु॒मती॒ इति॑ धेनु-मती᳚ । हि । भू॒तम् । सू॒य॒व॒सिनी॒ इति॑ सु-य॒व॒सिनी᳚ । मन॑वे । य॒श॒स्ये॑ इति॑ ॥ वीति॑ । अ॒स्क॒भ्ना॒त्॒ । रोद॑सी॒ इति॑ । विष्णुः॑ । ए॒ते इति॑ । दा॒धार॑ । पृ॒थि॒वीम् । अ॒भितः॑ । म॒यूखैः᳚ ॥ 
+</details>
+
 <details><summary>Hellwig Grammar</summary>
 
 -   *irāvatī* ← *irāvat*
