--- a/shAkalam/saMhitA/sarva-prastutiH/10/087.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/087.md
@@ -139,6 +139,12 @@ sá ← sá- ~ tá- (pronoun)
 र॒क्षः॒ऽहन॑म् । वा॒जिन॑म् । आ । जि॒घ॒र्मि॒ । मि॒त्रम् । प्रथि॑ष्ठम् । उप॑ । या॒मि॒ । शर्म॑ ।  
 शिशा॑नः । अ॒ग्निः । क्रतु॑ऽभिः । सम्ऽइ॑द्धः । सः । नः॒ । दिवा॑ । सः । रि॒षः । पा॒तु॒ । नक्त॑म् ॥
 </details>
+
+<details><summary>पद-पाठः-तैत्तिरीयः</summary>
+र॒ख्षो॒हण॒मिति॑ रख्षः-हन᳚म् । वा॒जिन᳚म् । एति॑ । जि॒घ॒र्मि॒ । मि॒त्रम् । प्रथि॑ष्ठम् । उपेति॑ । या॒मि॒ । शर्म॑ ॥  
+शिशा॑नः । अ॒ग्निः । क्रतु॑भि॒रिति॒ क्रतु॑-भिः॒ । समि॑द्ध॒ इति॒ सम्-इ॒द्धः॒ । सः । नः॒ । दिवा᳚ । [33] सः । रि॒षः । पा॒तु॒ । नक्त᳚म् ॥ 2R । 
+</details>
+
 <details><summary>Hellwig Grammar</summary>
 
 -   *rakṣohaṇaṃ* ← *rakṣaḥ* ← *rakṣas*
