--- a/shAkalam/saMhitA/sarva-prastutiH/10/082.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/082.md
@@ -1912,7 +1912,7 @@ ukthaśā́saḥ ← ukthaśás- (nominal stem)
 <details><summary>पद-पाठः</summary>
 
 न । तम् । वि॒दा॒थ॒ । यः । इ॒मा । ज॒जान॑ । अ॒न्यत् । यु॒ष्माक॑म् । अन्त॑रम् । ब॒भू॒व॒ ।  
-नी॒हा॒रेण॑ । प्रावृ॑ताः । जल्प्या॑ । च॒ । अ॒सु॒ऽतृपः॑ । उ॒क्थ॒ऽशसः॑॑ । च॒र॒न्ति॒ ॥
+नी॒हा॒रेण॑ । प्रावृ॑ताः । जल्प्या॑ । च॒ । अ॒सु॒ऽतृपः॑ । उ॒क्थ॒ऽशसः॑ । च॒र॒न्ति॒ ॥
 </details>
 <details><summary>Hellwig Grammar</summary>
 
