--- a/shAkalam/saMhitA/sarva-prastutiH/01/109.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/01/109.md
@@ -401,7 +401,7 @@ Ich schaute aus im Geiste Gut begehrend, Indrāgni, nach Bekannten und Verwandte
 अश्र॑व॒ꣳ॒ हि भू॑रि॒दाव॑त्तरा वा॒व्ँ  
 +++(कन्या-धन-दातुर्)+++ विजा॑मातुर् उ॒त वा॑ घा+++(→प्रसिद्धौ)+++ स्या॒लात् +++(अपेक्षया)+++।   
 अथा॒ +++(हवीरूप-)+++सोम॑स्य॒ प्रय॑ती+++(=प्रयत्या [दानेन])+++ यु॒वभ्या॒म्   
-इन्द्रा᳚ग्नी॒ स्तोम॑ञ् जनयामि॒ नव्य᳚म् ॥
+इन्द्रा॑ग्नी॒ स्तोम॑ञ् जनयामि॒ नव्य॑म् ॥
 
 </details>
 </div>
