--- a/shAkalam/saMhitA/sarva-prastutiH/06/060.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/06/060.md
@@ -3144,7 +3144,7 @@ So schenket labereichen Trunk, und schenket schnelle Rosse uns, Zu fahren, Indra
 
 
 उ॒भा वा॑म् **इन्द्राग्नी आहु॒वध्या॑**+++(य् =होतुम्)+++  
-उ॒भा राध॑सस्+++(=ओदनेन)+++ **स॒ह मा॑द॒यध्यै᳚** ।  
+उ॒भा राध॑सस्+++(=ओदनेन)+++ **स॒ह मा॑द॒यध्यै॑** ।  
 उ॒भा दा॒तारा॑व् इ॒षाꣳ र॑यी॒णाम्  
 उ॒भा वाज॑स्य+++(=अन्नस्य)+++ सा॒तये॑+++(=लाभाय)+++ **हुवे वाम्** ॥
 
