--- a/shAkalam/saMhitA/sarva-prastutiH/01/006.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/01/006.md
@@ -491,7 +491,7 @@ Sie schirren an den Wagen an des Indra Füchse licht und kühn, Das Zwiegespann,
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - पदार्थः</summary>
 
-पदार्थान्वयभाषाः -  (युञ्जन्ति) युञ्जन्तु। अत्र लोडर्थे लट्। (अस्य) सूर्य्यस्याग्नेः (काम्या) कामयितव्यौ। अत्र सर्वत्र सुपां सुलुगित्याकारादेशः। (हरी) हरणशीलावाकर्षणवेगगुणौ पूर्वपक्षापरपक्षौ वा। इन्द्रस्य हरी ताभ्यामिदꣳ सर्वं हरतीति। (षड्विंशब्रा०प्रपा०१.ख०१) (विपक्षसा) विविधानि यन्त्रकलाजलचक्रभ्रमणयुक्तानि पक्षांसि पार्श्वे स्थितानि ययोस्तौ (रथे) रमणसाधने भूजलाकाशगमनार्थे याने। यज्ञसंयोगाद्राजा स्तुतिं लभेत, राजसंयोगाद्युद्धोपकरणानि। तेषां रथः प्रथमगामी भवति। रथो रंहतेर्गतिकर्मणः स्थिरतेर्वा स्याद्विपरीतस्य रममाणोऽस्मिँस्तिष्ठतीति वा रपतेर्वा रसतेर्वा। (निरु०९.११) रथ इति पदनामसु पठितम्। (निघं०५.३) आभ्यां प्रमाणाभ्यां रथशब्देन विशिष्टानि यानानि गृह्यन्ते। (शोणा) वर्णप्रकाशकौ गमनहेतू च (धृष्णू) दृढौ (नृवाहसौ) सम्यग्योजितौ नॄन् वहतस्तौ॥२॥
+पदार्थान्वयभाषाः -  (युञ्जन्ति) युञ्जन्तु। अत्र लोडर्थे लट्। (अस्य) सूर्य्यस्याग्नेः (काम्या) कामयितव्यौ। अत्र सर्वत्र सुपां सुलुगित्याकारादेशः। (हरी) हरणशीलावाकर्षणवेगगुणौ पूर्वपक्षापरपक्षौ वा। इन्द्रस्य हरी ताभ्यामिदँ सर्वं हरतीति। (षड्विंशब्रा०प्रपा०१.ख०१) (विपक्षसा) विविधानि यन्त्रकलाजलचक्रभ्रमणयुक्तानि पक्षांसि पार्श्वे स्थितानि ययोस्तौ (रथे) रमणसाधने भूजलाकाशगमनार्थे याने। यज्ञसंयोगाद्राजा स्तुतिं लभेत, राजसंयोगाद्युद्धोपकरणानि। तेषां रथः प्रथमगामी भवति। रथो रंहतेर्गतिकर्मणः स्थिरतेर्वा स्याद्विपरीतस्य रममाणोऽस्मिँस्तिष्ठतीति वा रपतेर्वा रसतेर्वा। (निरु०९.११) रथ इति पदनामसु पठितम्। (निघं०५.३) आभ्यां प्रमाणाभ्यां रथशब्देन विशिष्टानि यानानि गृह्यन्ते। (शोणा) वर्णप्रकाशकौ गमनहेतू च (धृष्णू) दृढौ (नृवाहसौ) सम्यग्योजितौ नॄन् वहतस्तौ॥२॥
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
