--- a/shAkalam/saMhitA/sarva-prastutiH/01/009.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/01/009.md
@@ -2103,7 +2103,7 @@ Den Indra, ihn, den Güterherrn, der kommt zu helfen, rufen wir, Besingend ihn, 
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - पदार्थः</summary>
 
-पदार्थान्वयभाषाः -  (वसोः) सुखवासहेतोर्विद्यादिधनस्य (इन्द्रम्) धारकम् (वसुपतिम्) वसूनामग्निपृथिव्यादीनां पतिं पालकं स्वामिनम्। कतमे वसव इति। अग्निश्च पृथिवी च वायुश्चान्तरिक्षं चादित्यश्च द्यौश्च चन्द्रमाश्च नक्षत्राणि चैते वसव एतेषु हीदꣳसर्वं वसु हितमेते हीदꣳसर्वं वासयन्ते तद्यदिदꣳसर्वं वासयन्ते तस्माद्वसव इति। (श०ब्रा०१४.५.७.४) (गीर्भिः) वेदविद्यया संस्कृताभिर्वाग्भिः। गीरिति वाङ्नामसु पठितम्। (निघं०१.११) (गृणन्तः) स्तुवन्तः। (ऋग्मियम्) ऋचां वेदमन्त्राणां निर्मातारम्। ऋगुपपदान्मीञ्धातोः क्विप्। अमीयङादेशश्चेति। (होम) आह्वयामः। ह्वेञ् इत्यस्माल्लडुत्तमबहुवचने बहुलं छन्दसीति शपो लुक्। छन्दस्युभयथा इत्युभयसंज्ञात्वे गुणसम्प्रसारणे भवतः। छान्दसो वर्णलोपो वेति सकारलोपश्च। (गन्तारम्) ज्ञातारं सर्वत्र व्याप्त्या प्रापकम् (ऊतये) रक्षणाय स्वामित्वप्राप्तये क्रियोपयोगाय वा॥९॥
+पदार्थान्वयभाषाः -  (वसोः) सुखवासहेतोर्विद्यादिधनस्य (इन्द्रम्) धारकम् (वसुपतिम्) वसूनामग्निपृथिव्यादीनां पतिं पालकं स्वामिनम्। कतमे वसव इति। अग्निश्च पृथिवी च वायुश्चान्तरिक्षं चादित्यश्च द्यौश्च चन्द्रमाश्च नक्षत्राणि चैते वसव एतेषु हीदँसर्वं वसु हितमेते हीदँसर्वं वासयन्ते तद्यदिदँसर्वं वासयन्ते तस्माद्वसव इति। (श०ब्रा०१४.५.७.४) (गीर्भिः) वेदविद्यया संस्कृताभिर्वाग्भिः। गीरिति वाङ्नामसु पठितम्। (निघं०१.११) (गृणन्तः) स्तुवन्तः। (ऋग्मियम्) ऋचां वेदमन्त्राणां निर्मातारम्। ऋगुपपदान्मीञ्धातोः क्विप्। अमीयङादेशश्चेति। (होम) आह्वयामः। ह्वेञ् इत्यस्माल्लडुत्तमबहुवचने बहुलं छन्दसीति शपो लुक्। छन्दस्युभयथा इत्युभयसंज्ञात्वे गुणसम्प्रसारणे भवतः। छान्दसो वर्णलोपो वेति सकारलोपश्च। (गन्तारम्) ज्ञातारं सर्वत्र व्याप्त्या प्रापकम् (ऊतये) रक्षणाय स्वामित्वप्राप्तये क्रियोपयोगाय वा॥९॥
 </details>
 <details><summary>दयानन्द-सरस्वती (हि) - भावार्थः</summary>
 
