--- a/shAkalam/saMhitA/sarva-prastutiH/07/099.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/07/099.md
@@ -673,7 +673,7 @@ Nicht ist, Gott Vischnu, einer je, noch wird sein, der deiner Grösse andres End
 <details open><summary><h3>विश्वास-प्रस्तुतिः ...{Loading}...</h3></summary>
 
 
-+++(द्यावापृथिव्यौ!)+++ इरा॑वती+++(=अन्नवत्यौ)+++ धेनु॒मती॒ हि **भू॒तꣳ**+++(=भवतं)+++  
++++(द्यावापृथिव्यौ!)+++ इरा॑वती+++(=अन्नवत्यौ)+++ धेनु॒मती॒ हि **भू॒तँ**+++(=भवतं)+++  
 सू॑-यव॒सिनी॒+++(=सु-गो-भक्ष्य-घासे)+++ मन॑वे **यश॒स्ये॑** ।  
 **व्य॑स्कभ्ना॒द्**+++(=व्यस्थापयत्)+++ रोद॑सी॒ **विष्णु॑र्**+++(→आदित्यः)+++ ए॒ते  
 **दा॒धार॑** +++(अन्तरिक्षरूपिणीम्)+++ पृथि॒वीम् अ॒भितो॑ म॒यूखैः॑+++(→कीलैः/ किरणैः)+++ ॥
