--- a/shAkalam/saMhitA/sarva-prastutiH/08/042.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/08/042.md
@@ -306,7 +306,7 @@ Der weise Gott befestigte den Himmel und mass rings aus der weiten Erde Umfang; 
 
 ए॒व+आ व॑न्दस्व॒ वरु॑णम् बृ॒हन्त॑म् ।  
 न॒म॒स्य+ आ धीर॑म् अ॒मृत॑स्य गो॒पाम् ।  
-स न॒श् शर्म॑ त्रि॒-वरू॑थ॒व्ँ+++(=वर्म)+++ वियꣳ॑सत्+++(=वियमयतु)+++ ॥37॥  
+स न॒श् शर्म॑ त्रि॒-वरू॑थ॒व्ँ+++(=वर्म)+++ वियँ॑सत्+++(=वियमयतु)+++ ॥37॥  
 यू॒यम् पा॑त स्व॒स्तिभि॒स् सदा॑ नः ।  
 
 </details>
