--- a/shAkalam/saMhitA/sarva-prastutiH/10/040.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/040.md
@@ -3460,9 +3460,9 @@ Davon wissen wir nicht, das verkündet uns schön, wie der Jüngling in der Jung
 
 
 आ वा॑म् अगन्त् सुम॒तिर्, वा॑जिनी+++(=अश्वी)+++वसू॒  
-न्य् +++(हे)+++ अश्वि॑ना, हृ॒त्सु +++(गृहप्राप्ति)+++कामाꣳ॑ अयꣳसत+++(=नियती कृताः)+++ ।  
+न्य् +++(हे)+++ अश्वि॑ना, हृ॒त्सु +++(गृहप्राप्ति)+++कामाँ॑ अयँसत+++(=नियती कृताः)+++ ।  
 अभू॑तङ् गो॒पा मि॑थु॒ना शु॑भस्पती  
-प्रि॒या अ॑र्य॒म्णो दुर्याꣳ॑+++(=गृहान्)+++ अशीमहि+++(=प्रविशेम)+++ ।
+प्रि॒या अ॑र्य॒म्णो दुर्याँ॑+++(=गृहान्)+++ अशीमहि+++(=प्रविशेम)+++ ।
 
 </details>
 </div>
@@ -3754,9 +3754,9 @@ Zu uns ist, o Gabenreiche, euer Wohlwollen gekommen; in euren Herzen, o Açvinen
 
 
 ता+++(=तौ)+++ म॑न्दसा॒ना+++(=स्तूयमानौ)+++ मनु॑षो दुरो॒ण+++(=गृहे)+++  
-**आ ध॒त्तꣳ** र॒यिं द॒श-वी॑रं वच॒स्यवे॑+++(=वचनवते)+++ ।  
-**कृ॒तं**+++(=कुरुतं)+++ ती॒र्थꣳ सु॑-प्रपा॒णꣳ **शु॑भस्-पती** +++(अश्विनौ)+++,  
-स्था॒णुं प॑थे॒ष्ठाम् अप॑ दुर्म॒तिꣳ **ह॑तम्** ।  
+**आ ध॒त्तँ** र॒यिं द॒श-वी॑रं वच॒स्यवे॑+++(=वचनवते)+++ ।  
+**कृ॒तं**+++(=कुरुतं)+++ ती॒र्थँ सु॑-प्रपा॒णँ **शु॑भस्-पती** +++(अश्विनौ)+++,  
+स्था॒णुं प॑थे॒ष्ठाम् अप॑ दुर्म॒तिँ **ह॑तम्** ।  
 
 </details>
 </div>
