--- a/shAkalam/saMhitA/sarva-prastutiH/10/103.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/103.md
@@ -30,7 +30,7 @@ In the course of the hymn the focus shifts from exclusive concentration on Indra
 आ॒शुः शिशा॑नो+++(=तीक्ष्णो)+++ वृष॒भो न यु॒ध्मो+++(=योधा)+++  
 घ॑नाघ॒नः+++(=घातकः)+++ क्षोभ॑णश्चर्षणी॒नाम्+++(=पदातीनाम्)+++।  
 सं॒क्रन्द॑नो ऽनिमि॒ष ए॑कवी॒रः  
-श॒तꣳ सेना॑ अजयत् सा॒कम् इन्द्रः॑ ॥
+श॒तँ सेना॑ अजयत् सा॒कम् इन्द्रः॑ ॥
 
 </details>
 </div>
@@ -549,8 +549,8 @@ Mit ihm, dem Donnrer, der nicht schlummernd Sieg gewinnt, der Schlacht erregt vo
 
 
 स इषु॑हस्तैः॒ स नि॑ष॒ङ्गिभि॑र् +++(=खड्गिभिर्)+++ व॒शी  
-सꣳस्र॑ष्टा॒+++(=संमिश्रकः)+++ स युध॒+++(=योद्धा)+++ इन्द्रो॑ +++(पर)+++ग॒णेन॑।  
-स॒ꣳ॒सृ॒ष्ट॒जित् सो॑म॒पा बा॑हुश॒र्ध्य्+++(=बली)+++  
+सँस्र॑ष्टा॒+++(=संमिश्रकः)+++ स युध॒+++(=योद्धा)+++ इन्द्रो॑ +++(पर)+++ग॒णेन॑।  
+स॒ँ॒सृ॒ष्ट॒जित् सो॑म॒पा बा॑हुश॒र्ध्य्+++(=बली)+++  
 ऊ॑र्ध्व-धन्वा॒ प्रति॑हिताभि॒र् अस्ता॑+++(=क्षेप्ता)+++ ॥
 
 </details>
@@ -828,7 +828,7 @@ Mit seiner Schar, die Pfeile trägt und Köcher, theilt seine Kämpfe der gewalt
 
 
 बृह॑स्+++(=वाचस्)+++पते॒ परि॑ दीया॒+++(=द्रव)+++ रथे॑न  
-रक्षो॒हाऽमित्राꣳ॑ अप॒बाध॑मानः।  
+रक्षो॒हाऽमित्राँ॑ अप॒बाध॑मानः।  
 प्र॒भ॒ञ्जन्त् सेनाः॑ प्रमृ॒णो+++(=प्रहिंस्रो)+++ यु॒धा  
 जय॑न्न् अ॒स्माक॑म् एध्य् अवि॒ता रथा॑नाम् ॥
 
@@ -1368,8 +1368,8 @@ Durch Stärke kenntlich, fest, der Helden kühnster, siegreich, gewaltig, stark 
 
 गो॒त्र॒भिदं॑ गो॒विदं॒ वज्र॑बाहुं॒  
 जय॑न्त॒म् अज्म॑ प्रमृ॒णन्त॒म् ओज॑सा।  
-इ॒मꣳ स॑जाता॒ अनु॑ वीरयध्व॒म्  
-इन्द्रꣳ॑ सखा॒योऽनु॒ सꣳ र॑भध्वम् ॥
+इ॒मँ स॑जाता॒ अनु॑ वीरयध्व॒म्  
+इन्द्रँ॑ सखा॒योऽनु॒ सँ र॑भध्वम् ॥
 
 </details>
 </div>
@@ -1650,7 +1650,7 @@ Der blitzbewehrt den Stall erschliesst, die Kühe erringt und Bahn sich bricht m
 अ॒भिगो॒त्राणि॒ सह॑सा॒ गाह॑मानो  
 ऽदा॒यो वी॒रश् श॒तम॑न्यु॒र् इन्द्रः॑।  
 दु॒श्च्य॒व॒नᳶ पृ॑तना॒षाड् अ॑यु॒द्ध्यो॑  
-ऽस्माक॒ꣳ॒ सेना॑ अवतु॒ प्र यु॒त्सु ॥
+ऽस्माक॒ँ॒ सेना॑ अवतु॒ प्र यु॒त्सु ॥
 
 </details>
 </div>
@@ -2157,7 +2157,7 @@ Ihr Führer sei uns Indra und Brihaspati, vor dringe Opfer, Opferlohn und Soma, 
 
 
 इन्द्र॑स्य॒ वृष्णो॒ वरु॑णस्य॒ राज्ञ॑  
-आदि॒त्यानां॑ म॒रुता॒ꣳ॒ शर्ध॑ उ॒ग्रम्।  
+आदि॒त्यानां॑ म॒रुता॒ँ॒ शर्ध॑ उ॒ग्रम्।  
 म॒हाम॑नसां भुवनच्य॒वानां॒  
 घोषो॑ दे॒वानां॒ जय॑ता॒म् उद॑स्थात् ॥
 
@@ -2410,7 +2410,7 @@ Des Königs Varuna, des Helden Indra, der Maruts, der Aditja's Schar ist mächti
 उद्वृ॑त्रहन्वा॒जिनां॒ वाजि॑ना॒न्युद्रथा॑नां॒ जय॑तां यन्तु॒ घोषाः॑ ॥
 
 -  उद्+ध॑र्षय मघव॒न्न् आयु॑धा॒न्य्  
-   उत् सत्व॑नां माम॒कानां॒ महा॑ꣳसि।  
+   उत् सत्व॑नां माम॒कानां॒ महा॑ँसि।  
    उद् वृ॑त्रहन् वा॒जिनां॒ वाजि॑ना॒न्य्  
    उद् रथा॑नां॒ जय॑तामेतु॒ घोषः॑ ॥
 
