--- a/shAkalam/saMhitA/sarva-prastutiH/10/163.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/163.md
@@ -28,7 +28,7 @@ Like X.161, this is another charm against disease with Atharvan parallels (AVŚ 
 
 अ॒क्षीभ्या॑न् ते॒ नासि॑काभ्यां॒  
 कर्णा॑भ्यां॒ चुबु॑का॒दधि॑ ।  
-यक्ष्मꣳ॑ शीर्ष॒ण्यं॑ म॒स्तिष्का॑ज्  
+यक्ष्मँ॑ शीर्ष॒ण्यं॑ म॒स्तिष्का॑ज्  
 जि॒ह्वाया॒ विवृ॑हामि+++(=संमृज्य निरस्यामि)+++ ते ।
 
 </details>
@@ -268,7 +268,7 @@ Aus deinem Augen, den Nasenlöchern, den Ohren, aus dem Gehirne und der Zunge tr
 
 ग्री॒वाभ्य॑स्+++(→पर्वभेदेन बहुवचनम्)+++ त उ॒ष्णिहा॑भ्यः॒+++(=ग्रीवापृष्ठमूलभ्यः)+++  
 कीक॑साभ्यो+++(=अस्थिभ्यो)+++ ऽनू॒क्या॑त्+++(=पृष्ठंवशात्)+++ ।  
-यक्ष्मं॑ दोष॒ण्य॑म् अꣳसा॑भ्यां  
+यक्ष्मं॑ दोष॒ण्य॑म् अँसा॑भ्यां  
 बा॒हुभ्यां॒ विवृ॑हामि ते ।
 
 </details>
@@ -726,8 +726,8 @@ Aus deinen Eingeweiden, den Gedärmen, dem Mastdarm, dem Herzen, aus den Lungen,
 
 ऊ॒रुभ्या॑न् ते ऽष्ठी॒वद्भ्यां॒+++(=ऊरुजान्वोः सन्धिभ्याम्)+++  
 जङ्घा॑भ्यां॒ प्रप॑दाभ्याम् ।  
-यक्ष्म॒२ꣳ॒ श्रोणी॑भ्यां भा॒सदा॑द्+++(=गुह्यप्रदेशात्)+++  
-ध्व॒ꣳ॒ससो॒+++(=नाभेः/ गुदवलयात्)+++ विवृ॑हामि ते ।  
+यक्ष्म॒ँ॒ श्रोणी॑भ्यां भा॒सदा॑द्+++(=गुह्यप्रदेशात्)+++  
+ध्व॒ँ॒ससो॒+++(=नाभेः/ गुदवलयात्)+++ विवृ॑हामि ते ।  
 
 </details>
 </div>
