--- a/shAkalam/saMhitA/sarva-prastutiH/01/022.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/01/022.md
@@ -3657,7 +3657,7 @@ Von dort her mögen schützen uns die Götter, von wo Vischnu durch Der Erde sie
 
 इ॒दव्ँ विष्णु॒र् +++(अग्नि-विद्युत्-सूर्यात्मना)+++ वि च॑क्रमे  
 +++(पृथिव्याम् अन्तरिक्षे दिवि च)+++ त्रे॒धा नि द॑धे प॒दम् ।  
-+++(तैर् आधारैर् जगत्)+++ सम् ऊ॑ढम् अस्य पाꣳसु॒रे +++(ले इति साम्नि, पांसुमति [पादे])+++ ॥
++++(तैर् आधारैर् जगत्)+++ सम् ऊ॑ढम् अस्य पाँसु॒रे +++(ले इति साम्नि, पांसुमति [पादे])+++ ॥
 
 </details>
 </div>
