--- a/shAkalam/saMhitA/sarva-prastutiH/07/093.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/07/093.md
@@ -32,8 +32,8 @@ Indra and Agni Both Geldner and Renou remark on the prominence of the word vā́
 
 शुचि॒न् नु स्तोम॒न् नव॑जातम् अ॒द्य
 +इन्द्रा॑ग्नी वृत्रहणा+++(णौ [युवां])+++ जु॒षेथा॑म् ॥ [25]   
-उ॒भा हि वाꣳ॑ सु॒हवा॒ जोह॑वीमि॒  
-ता वाजꣳ॑ स॒द्य उ॑श॒ते+++(=कामयमानाय)+++ धेष्ठा॑+++(←धा)+++ ॥
+उ॒भा हि वाँ॑ सु॒हवा॒ जोह॑वीमि॒  
+ता वाजँ॑ स॒द्य उ॑श॒ते+++(=कामयमानाय)+++ धेष्ठा॑+++(←धा)+++ ॥
 
 
 </details>
