--- a/shAkalam/saMhitA/sarva-prastutiH/10/085.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/085.md
@@ -5456,7 +5456,7 @@ Erhebe dich von hier; denn diese ist vermählt; ich ehre dich, Viçvāvasu, ehrf
 
 उ॒दी॒र्ष्वाऽतो॑ विश्वावसो॒ +++(गन्धर्व)+++  
 नम॑सेडामहे त्वा ।  
-अ॒न्याम् इ॑च्छ प्रफ॒र्व्यꣳ॑+++(=प्रथमवयसं)+++  
+अ॒न्याम् इ॑च्छ प्रफ॒र्व्यँ॑+++(=प्रथमवयसं)+++  
 सञ्जा॒यां पत्या॑ सृज ।  
 
 </details>
@@ -5707,7 +5707,7 @@ Erhebe dich von hier, o Viçvāvasu, wir verehren dich in Demuth; eine andere ü
 अ॒नृ॒क्ष॒रा+++(=कंटकशर्करादिरहिताः)+++ ऋ॒जव॑स् सन्तु॒ पन्था॒  
 येभि॒स् सखा॑यो॒ यन्ति॑ नो वरे॒यम्+++(=वरणीयं [कन्यायाः पित्रादिकं प्रति])+++ ।  
 सम् अ॑र्य॒मा सं भगो॑ नो+++(=आवाम्, अस्मदो द्वयोश्च इति बहुवचनम्)+++ निनीया॒त्  
-सञ् जा॑स्प॒त्यꣳ+++(=जायापतिभावः)+++ सु॒यम॑म् अस्तु देवाः ।+++(र५)+++  
+सञ् जा॑स्प॒त्यँ+++(=जायापतिभावः)+++ सु॒यम॑म् अस्तु देवाः ।+++(र५)+++  
 
 </details>
 </div>
@@ -6591,7 +6591,7 @@ Von hier mache ich dich frei, nicht von dort; schön verbunden mache ich dich do
 <details open><summary><h3>विश्वास-प्रस्तुतिः ...{Loading}...</h3></summary>
 
 पू॒षा त्वा+इ॒तो न॑यतु॒ हस्त॒-गृह्या॒  
-ऽश्विनौ॑ त्वा॒ प्रव॑हता॒ꣳ॒ रथे॑न ।  
+ऽश्विनौ॑ त्वा॒ प्रव॑हता॒ँ॒ रथे॑न ।  
 +++(मदीयान्)+++ गृ॒हान् ग॑च्छ गृ॒हप॑त्नी॒  
 यथा ऽसो॑+++(=स्या)+++ व॒शिनी॒ त्वं वि॒दथ॒म्+++(=यज्ञं)+++ आव॑दासि+++(=आवद)+++ ।। (2)
 
@@ -7948,7 +7948,7 @@ Hässlich wird der glänzende Leib [des Gatten], wenn auf jene verkehrte Weise d
 <details open><summary><h3>विश्वास-प्रस्तुतिः ...{Loading}...</h3></summary>
 
 ये व॒द्ध्वश् च॒न्द्रं+++(=आह्लादकं)+++ व॑ह॒तुं+++(=स्त्रीधनं)+++  
-यक्ष्मा॒ यन्ति॒ जना॒ꣳ॒ अनु॑ ।  
+यक्ष्मा॒ यन्ति॒ जना॒ँ॒ अनु॑ ।  
 पुन॒स् तान् य॒ज्ञिया॑ दे॒वा  
 नय॑न्तु॒ यत॒ आग॑ताः ।+++(र४)+++  
 
@@ -8432,7 +8432,7 @@ Nicht mögen Wegelagerer, welche im Hinterhalte liegen, das Ehepaar erreichen, a
 
 
 सु॒म॒ङ्ग॒लीर् इ॒यं व॒धूर्  
-इ॒माꣳ स॑मेत॒ पश्य॑त ।  
+इ॒माँ स॑मेत॒ पश्य॑त ।  
 सौभा॑ग्यम् अ॒स्यै द॒त्वाया+++(=दत्वा)+++-  
 ऽथाऽऽस्तं॒ +++(स्वस्वगृहाणि)+++ वि परे॑तन+++(=गच्छत)+++ ।+++(र४)+++  
 
@@ -10505,7 +10505,7 @@ Soma erhielt dich zuerst; der Gandharve erhielt dich als der zweite, dein dritte
 
 सोमो॑ऽददद् गन्ध॒र्वाय॑  
 गन्ध॒र्वो ऽद॑दद् अ॒ग्नये॑ ।  
-र॒यिञ् च॑ पु॒त्राꣳश् चा॑दाद्  
+र॒यिञ् च॑ पु॒त्राँश् चा॑दाद्  
 अ॒ग्निर् मह्य॒म् अथो॑ इ॒माम् ।  
 
 </details>
@@ -11654,7 +11654,7 @@ Kein Unglück im Auge führend, den Gatten nicht verletzend, sei glückbringend 
 
 
 इ॒मान्त्वम् इ॑न्द्र मीढ्वस्+++(=वर्षक इन्द्र)+++  
-सुपु॒त्राꣳ सु॒भगां॑ कुरु ।  
+सुपु॒त्राँ सु॒भगां॑ कुरु ।  
 दशा॑स्यां पु॒त्राना धे॑हि॒  
 पति॑मेकाद॒शं कृ॑धि । 
 
