--- a/shAkalam/saMhitA/sarva-prastutiH/10/151.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/151.md
@@ -273,7 +273,7 @@ Durch Glauben wird das Feu'r entflammt, durch Glauben Opferguss geweiht; Auch au
 <details><summary><h3>मूलम् ...{Loading}...</h3></summary>
 
 
-प्रि॒य२ꣳ श्र॑द्धे॒ दद॑तः । प्रि॒य२ꣳ श्र॑द्धे॒ दिदा॑सतः ।  
+प्रि॒यँ श्र॑द्धे॒ दद॑तः । प्रि॒यँ श्र॑द्धे॒ दिदा॑सतः ।  
 प्रि॒यं भो॒जेषु॒ यज्व॑सु। इ॒दं म॑ उदि॒तङ् कृ॑धि ।  
 
 </details>
@@ -759,7 +759,7 @@ Wie Götter der Asurenschar, der starken, schenkten ihr Vertraun, So mache du au
 श्र॒द्धां हृ॑द॒य्य१॒॑याकू॑त्या श्र॒द्धया॑ विन्दते॒ वसु॑ ॥
 
 -  श्र॒द्धान् दे॑वा॒ यज॑मानाः । वा॒युगो॑पा॒ उपा॑सते ।  
-श्र॒द्धाꣳ हृ॑द॒य्य॑या ऽऽकू॑त्या । श्र॒द्धया॑ हूयते ह॒विः ।  
+श्र॒द्धाँ हृ॑द॒य्य॑या ऽऽकू॑त्या । श्र॒द्धया॑ हूयते ह॒विः ।  
 
 </details>
 </div>
@@ -989,7 +989,7 @@ Den Glauben ehren andachtsvoll die Götter, die der Wind beschirmt; Der Glaube w
 
 
 श्र॒द्धां प्रा॒तर् ह॑वामहे । श्र॒द्धां म॒ध्यन्दि॑नं॒ परि॑ ।  
-श्र॒द्धाꣳ सूर्य॑स्य नि॒म्रुचि॑ । श्रद्धे॒ श्रद्धा॑पये॒ह मा॑ ।
+श्र॒द्धाँ सूर्य॑स्य नि॒म्रुचि॑ । श्रद्धे॒ श्रद्धा॑पये॒ह मा॑ ।
 
 </details>
 </div>
