--- a/shAkalam/saMhitA/sarva-prastutiH/10/163.md
+++ b/shAkalam/saMhitA/sarva-prastutiH/10/163.md
@@ -726,8 +726,8 @@ Aus deinen Eingeweiden, den Gedärmen, dem Mastdarm, dem Herzen, aus den Lungen,
 
 ऊ॒रुभ्या॑न् ते ऽष्ठी॒वद्भ्यां॒+++(=ऊरुजान्वोः सन्धिभ्याम्)+++  
 जङ्घा॑भ्यां॒ प्रप॑दाभ्याम् ।  
-यक्ष्म॒ँ॒ श्रोणी॑भ्यां भा॒सदा॑द्+++(=गुह्यप्रदेशात्)+++  
-ध्व॒ँ॒ससो॒+++(=नाभेः/ गुदवलयात्)+++ विवृ॑हामि ते ।  
+यक्ष्मँ॒ श्रोणी॑भ्यां भा॒सदा॑द्+++(=गुह्यप्रदेशात्)+++  
+ध्वँ॒ससो॒+++(=नाभेः/ गुदवलयात्)+++ विवृ॑हामि ते ।  
 
 </details>
 </div>
